# robotdesign3_2021_1

./: CMakeLists.txt  README.md  hand_coordinates.py  package.xml
hand_tracking/: hand_coordinates.py  test.py  test2.py  topic_test.py
launch/: main.launch  main_sim.launch
scripts/: hand.py  home.py  main_process.py  print_tf.py  sub_point.py  sub_pub_tf.py  tf.py  tf_coordinate_transformation.py  tfnoyatu.py
