<?xml version="1.0"?>
<package format="2">
  <name>hand_test</name>
  <version>0.0.0</version>
  <description>The hand_test package</description>

  <maintainer email="ueda@todo.todo">ueda</maintainer>

  <license>NON-COMMERCIAL LICENSE AGREEMENT</license>

  <author email="tiryoh@gmail.com">Daisuke Sato</author>
  <author email="nomura@rt-net.jp">Hiroyuki Nomura</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

</package>
