<?xml version="1.0"?>
<package format="2">
  <name>RobotDesign3_2021_1</name>
  <version>0.0.0</version>
  <description>The hand_test package</description>

  <maintainer email="nikumann8@gmail.com">sakurai</maintainer>

  <license>NON-COMMERCIAL LICENSE AGREEMENT</license>

  <author email="tiryoh@gmail.com">Daisuke Sato</author>
  <author email="nomura@rt-net.jp">Hiroyuki Nomura</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

</package>
